1.0.1
  11-12-13
  Improvements
  * 32482: PDF Controller should suggest to install Fonts

1.0.0
  11-09-19
  Publishing
  * Manual is finished
  * Status: alpha > beta

0.9.2
  11-07-24
  Development
  * Integration of all html2ps features into the flexform
  * Programming the plugin

0.0.2
  11-07-23
  Development
  * Creating the flexform

0.0.1
  11-07-22
  Initial release
  Dirk Wildt  http://wildt.at.die-netzmacher.de