@@ -360,9 +360,21 @@ class tx_pdfcontroller_pi1 extends tslib_pibase {
       // Build URL query
 
     $params = null;
-    foreach($_REQUEST as $key => $value)
+    foreach( $_REQUEST as $key => $value )
     {
-      $params = $params . '&' . $key . '=' . $value;
+        // #31190, 111213: Borries Jensen-
+      //$params = $params . '&' . $key . '=' . $value;
+        // #31190, 111213: Borries Jensen+
+      switch( true )
+      {
+        case( $key === 'URL' ):
+          $params = $params . '&' . $key . '=' . rawurlencode($value);
+          break;
+        default:
+          $params = $params . '&' . $key . '=' . $value;
+          break;
+      }
+        // #31190, 111213: Borries Jensen+
     }
     $str_url = t3lib_div::getIndpEnv('TYPO3_SITE_URL') . 
       'typo3conf/ext/pdfcontroller/res/html2ps_v2043/public_html/demo/html2ps.php?';
@@ -422,14 +434,20 @@ class tx_pdfcontroller_pi1 extends tslib_pibase {
     switch($rmCacheAll)
     {
       case('always (recommended)'):
-        // Remove all files
-        $str_exec = 'find ' . $path_to_html2ps_cache . '* -type f | xargs /bin/rm -f';
+          // Remove all files
+          // #31191, 111213: Borries Jensen-
+        //$str_exec = 'find ' . $path_to_html2ps_cache . '* -type f | xargs /bin/rm -f';
+          // #31191, 111213: Borries Jensen+
+        $str_exec = 'find ' . $path_to_html2ps_cache . ' -type f | xargs /bin/rm -f';
         if ($this->b_drs_all)
         {
           t3lib_div::devLog('[INFO/ALL] exec(' . $str_exec . ')', $this->extKey, 0);
         }
         exec($str_exec);
-        $str_exec   = 'find ' . $path_to_html2ps_out . '* -type f | xargs /bin/rm -f';
+          // #31191, 111213: Borries Jensen-
+        //$str_exec   = 'find ' . $path_to_html2ps_out . '* -type f | xargs /bin/rm -f';
+          // #31191, 111213: Borries Jensen+
+        $str_exec   = 'find ' . $path_to_html2ps_out . ' -type f | xargs /bin/rm -f';
         if ($this->b_drs_all)
         {
           t3lib_div::devLog('[INFO/ALL] exec(' . $str_exec . ')', $this->extKey, 0);
